used lambda expression instead of anonymous inner classes